--- a/index.html
+++ b/index.html
@@ -1154,9 +1154,10 @@
         </form>
         
         <p style="margin-top: 40px; color: #888; font-size: 10pt;">
-            Or email directly: <a href="mailto:hello@guaranteedbookings.co.uk" style="color: #D4AF37; text-decoration: none;">hello@guaranteedbookings.co.uk</a>
+            Or email directly: <a href="mailto:info@guaranteedbookings.co.uk" style="color: #D4AF37; text-decoration: none;">info@guaranteedbookings.co.uk</a>
         </p>
     </section>
 </body>
 
 </html>
+
