--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
         };
         
         // YOUR N8N WEBHOOK URL
-        const N8N_WEBHOOK = 'https://n8n-self-hosted-2-6i3h.onrender.com/webhook/lead-capture';
+        const N8N_WEBHOOK = 'https://n8n-self-hosted-2-6i3h.onrender.com/webhook/gb-leads';
         
         try {
             const response = await fetch(N8N_WEBHOOK, {
@@ -1154,5 +1154,6 @@
 
 </body>
 </html>
+
 
 
