--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,8 @@ select:focus option {
             source: 'sites.guaranteedbookings.co.uk'
         };
         
-        const N8N_WEBHOOK = 'https://n8n-self-hosted-2-6i3h.onrender.com/webhook/lead-capture';
+        // YOUR CORRECT WEBHOOK URL
+        const N8N_WEBHOOK = 'https://n8n-self-hosted-2-6i3h.onrender.com/webhook/gb-leads';
         
         try {
             const response = await fetch(N8N_WEBHOOK, {
@@ -1185,6 +1186,7 @@ select:focus option {
 
 </body>
 </html>
+
 
 
 
