--- a/index.html
+++ b/index.html
@@ -852,6 +852,19 @@
             background-color: #111111;
             color: #e0e0e0;
         }
+        /* FIX TEXT OVERFLOW */
+a {
+    word-break: break-all;
+}
+
+.case-study {
+    overflow: hidden;
+}
+
+.view-live a {
+    font-size: 10pt;
+    word-break: break-all;
+}
     </style>
 </head>
 <body>
@@ -1186,6 +1199,7 @@
 
 </body>
 </html>
+
 
 
 
