--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,38 @@ a {
                 <input type="email" id="formEmail" required>
             </div>
         </div>
+                <div class="form-row">
+            <div class="form-group">
+                <label>Phone *</label>
+                <input type="tel" id="formPhone" placeholder="07700 900123" required>
+            </div>
+            <div class="form-group">
+                <label>Best Date to Call *</label>
+                <input type="date" id="formDate" required min="">
+            </div>
+        </div>
+        
+        <div class="form-row">
+            <div class="form-group">
+                <label>Best Time *</label>
+                <select id="formTime" required>
+                    <option value="">Select...</option>
+                    <option value="Morning (9am-12pm)">Morning (9am-12pm)</option>
+                    <option value="Afternoon (12pm-5pm)">Afternoon (12pm-5pm)</option>
+                    <option value="Evening (5pm-8pm)">Evening (5pm-8pm)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Property Portfolio Size *</label>
+                <select id="formSize" required>
+                    <option value="">Select...</option>
+                    <option value="1-3">1-3 units</option>
+                    <option value="4-10">4-10 units</option>
+                    <option value="11-25">11-25 units</option>
+                    <option value="25+">25+ units</option>
+                </select>
+            </div>
+        </div>
         
         <div class="form-row">
     <div class="form-group">
@@ -1205,6 +1237,7 @@ a {
 
 </body>
 </html>
+
 
 
 
